--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Feudalismo</title>
 </head>
+
 <body>
     <div class="navbar">
         <div class="menu-toggle" id="menuToggle">
@@ -17,14 +19,14 @@
         </div>
         <div class="logo">Logo</div>
         <div class="user-actions">
-          <!-- Contenedor del botón de Modo Oscuro -->
-    <div class="dark-mode-container">
-        <!-- Botón de Modo Oscuro -->
-        <div class="dark-mode-toggle" id="darkModeToggle">
-            <div class="icon sun">☀️</div>
-            <div class="icon moon">🌙</div>
-        </div>
-    </div>
+            <!-- Contenedor del botón de Modo Oscuro -->
+            <div class="dark-mode-container">
+                <!-- Botón de Modo Oscuro -->
+                <div class="dark-mode-toggle" id="darkModeToggle">
+                    <div class="icon sun">☀️</div>
+                    <div class="icon moon">🌙</div>
+                </div>
+            </div>
 
             <div class="account">
                 <i class="fas fa-user"></i>
@@ -49,8 +51,20 @@
         </ul>
     </div>
 
-    <h1></h1>
+    <h1>League Of Legends</h1>
+
+    <main>
+    
+            <div id="championCards"></div>
+    
+
+    </main>
+
+
+
+
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
